# Plume

./: .dockerignore  .env.sample  Cargo.toml  Dockerfile  build.rs  rust-toolchain.toml
gettext-macros/: Cargo.toml
gettext-macros/src/: lib.rs
gettext-macros/tests/: main.rs
gettext-utils/: Cargo.toml
gettext-utils/src/: lib.rs
plume-api/: Cargo.toml
plume-cli/: Cargo.toml
plume-cli/src/: instance.rs  list.rs  main.rs  migration.rs  search.rs  timeline.rs  users.rs
plume-common/: Cargo.toml
plume-common/src/: lib.rs  utils.rs
plume-common/src/activity_pub/: inbox.rs  mod.rs  request.rs  sign.rs
plume-front/: Cargo.toml
plume-front/src/: editor.rs  lib.rs
plume-models/: Cargo.toml
plume-models/src/: admin.rs  api_tokens.rs  apps.rs  blocklisted_emails.rs  blog_authors.rs  blogs.rs  comment_seers.rs  comments.rs  config.rs  db_conn.rs  email_signups.rs  follows.rs  headers.rs  inbox.rs  instance.rs  lib.rs  likes.rs  lists.rs  medias.rs  mentions.rs  migrations.rs  notifications.rs  password_reset_requests.rs  plume_rocket.rs  post_authors.rs  posts.rs  remote_fetch_actor.rs  reshares.rs  safe_string.rs  signups.rs  tags.rs  users.rs
plume-models/src/search/: actor.rs  mod.rs  query.rs  searcher.rs  tokenizer.rs
plume-models/src/timeline/: mod.rs  query.rs
plume-models/tests/: lib.rs
po/plume/: af.po  ar.po  bg.po  ca.po  cs.po  cy.po  da.po  de.po  el.po  en.po  eo.po  es.po  eu.po  fa.po  fi.po  fr.po  gl.po  he.po  hi.po  hr.po  hu.po  it.po  ja.po  ko.po  nb.po  nl.po  no.po  pl.po  plume.pot  pt.po  ro.po  ru.po  sat.po  si.po  sk.po  sl.po  sr.po  sv.po  tr.po  uk.po  (+2 more)
rocket_csrf/: Cargo.toml  README.md
rocket_csrf/src/: lib.rs
rocket_csrf/tests/: fairing_configured.rs  fairing_default.rs  guard_configured.rs  guard_default.rs
rocket_i18n/: Cargo.toml  README.md
rocket_i18n/src/: lib.rs  with_rocket.rs
src/: inbox.rs  mail.rs  main.rs  template_utils.rs  utils.rs
src/api/: apps.rs  authorization.rs  mod.rs  posts.rs
src/routes/: blogs.rs  comments.rs  email_signups.rs  errors.rs  instance.rs  likes.rs  medias.rs  mod.rs  notifications.rs  posts.rs  reshares.rs  search.rs  session.rs  tags.rs  timelines.rs  user.rs  well_known.rs
templates/: base.rs.html  remote_interact_base.rs.html
templates/blogs/: details.rs.html  edit.rs.html  new.rs.html
templates/email_signups/: create.rs.html  edit.rs.html  new.rs.html
templates/errors/: base.rs.html  csrf.rs.html  not_authorized.rs.html  not_found.rs.html  server_error.rs.html  unprocessable_entity.rs.html
templates/instance/: about.rs.html  admin.rs.html  admin_header.rs.html  admin_mod.rs.html  emailblocklist.rs.html  index.rs.html  list.rs.html  privacy.rs.html  users.rs.html
templates/medias/: details.rs.html  index.rs.html  new.rs.html
templates/notifications/: index.rs.html
templates/partials/: comment.rs.html  comment_head.rs.html  post_card.rs.html
templates/posts/: details.rs.html  new.rs.html  remote_interact.rs.html
templates/search/: index.rs.html  result.rs.html
templates/session/: login.rs.html  password_reset.rs.html  password_reset_request.rs.html  password_reset_request_expired.rs.html  password_reset_request_ok.rs.html
templates/tags/: index.rs.html
templates/timelines/: details.rs.html
templates/users/: dashboard.rs.html  details.rs.html  edit.rs.html  follow_remote.rs.html  followed.rs.html  followers.rs.html  header.rs.html  new.rs.html
