[package]
name = "plume-front"
version = "0.7.2"
authors = ["Plume contributors"]
edition = "2018"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
gettext = "0.4.0"
gettext-macros = "0.6.1"
gettext-utils = "0.1.0"
js-sys = "0.3.91"
lazy_static = "1.5.0"
serde = "1.0.228"
serde_derive = "1.0.228"
serde_json = "1.0.149"
wasm-bindgen = "0.2.114"

[dependencies.web-sys]
version = "0.3.91"
features = [
  'console',
  'ClipboardEvent',
  'CssStyleDeclaration',
  'DataTransfer',
  'Document',
  'DomStringMap',
  'DomTokenList',
  'Element',
  'EventTarget',
  'FocusEvent',
  'History',
  'HtmlAnchorElement',
  'HtmlDocument',
  'HtmlFormElement',
  'HtmlInputElement',
  'HtmlSelectElement',
  'HtmlTextAreaElement',
  'KeyboardEvent',
  'Storage',
  'Location',
  'MouseEvent',
  'Navigator',
  'Node',
  'NodeList',
  'Text',
  'TouchEvent',
  'Window'
]
