[package]
name = "plume-models"
version = "0.7.2"
authors = ["Plume contributors"]
edition = "2018"

[dependencies]
ammonia = "3.2.0"
bcrypt = "0.12.1"
guid-create = "0.5.2"
itertools = "0.10.3"
lazy_static = "1.0"
ldap3 = "0.11.1"
openssl = "0.10.40"
rocket = { version = "0.5.1", features = ["json"], default-features = false }
reqwest = "0.11.11"
scheduled-thread-pool = "0.2.6"
serde = "1.0.137"
rust-s3 = { version = "0.33.0", optional = true, features = ["blocking"] }
serde_derive = "1.0"
serde_json = "1.0.81"
tantivy = "0.13.3"
url = "2.1"
walkdir = "2.2"
webfinger = "0.4.1"
whatlang = "0.16.2"
shrinkwraprs = "0.3.0"
glob = "0.3.1"
lindera-tantivy = { version = "0.7.1", optional = true }
tracing = "0.1.35"
riker = "0.4.2"
once_cell = "1.12.0"
lettre = "0.9.6"
native-tls = "0.2.10"
activitystreams = "=0.7.0-alpha.20"
diesel_migrations = "2.3.1"

[dependencies.chrono]
features = ["serde"]
version = "0.4"

[dependencies.diesel]
features = ["r2d2", "chrono"]
version = "2.3.6"

[dependencies.plume-api]
path = "../plume-api"

[dependencies.plume-common]
path = "../plume-common"

[dependencies.rocket_i18n]
path = "../rocket_i18n"

[dev-dependencies]
assert-json-diff = "2.0.1"

[features]
postgres = ["diesel/postgres"]
sqlite = ["diesel/sqlite"]
search-lindera = ["lindera-tantivy"]
s3 = ["rust-s3"]
