[package]
name = "plume-models"
version = "0.7.2"
authors = ["Plume contributors"]
edition = "2018"

[dependencies]
ammonia = "4.1.2"
async-recursion = "1.1.1"
bcrypt = "0.19.0"
guid-create = "0.5.2"
itertools = "0.14.0"
lazy_static = "1.5.0"
ldap3 = "0.12.1"
openssl = "0.10.75"
rocket = { version = "0.5.1", features = ["json", "secrets"], default-features = false }
reqwest = "0.13.2"
scheduled-thread-pool = "0.2.7"
rust-s3 = { version = "0.37.1", optional = true, features = ["blocking"] }
serde = "1.0.228"
serde_derive = "1.0.228"
serde_json = "1.0.148"
tantivy = "0.25.0"
url = "2.5.8"
walkdir = "2.5.0"
webfinger = "0.5.1"
whatlang = "0.18.0"
shrinkwraprs = "0.3.0"
glob = "0.3.3"
lindera-tantivy = { version = "2.0.0", optional = true }
tracing = "0.1.44"
riker = "0.4.2"
futures = "0.3.32"
once_cell = "1.21.3"
lettre = "0.11.19"
native-tls = "0.2.18"
activitystreams = "=0.7.0-alpha.25"
diesel_migrations = "2.3.1"

[dependencies.chrono]
features = ["serde"]
version = "0.4.44"

[dependencies.diesel]
features = ["r2d2", "chrono"]
version = "2.3.6"

[dependencies.plume-api]
path = "../plume-api"

[dependencies.plume-common]
path = "../plume-common"

[dependencies.rocket_i18n]
path = "../rocket_i18n"

[dev-dependencies]
assert-json-diff = "2.0.1"

[features]
postgres = ["diesel/postgres"]
sqlite = ["diesel/sqlite"]
search-lindera = ["lindera-tantivy"]
s3 = ["rust-s3"]
